update font and fix overflow

--- a/static/main.css
+++ b/static/main.css
@@ -10,6 +10,7 @@ body {
     font-weight: 400;
     color: #2c3e50;
     background: #3c0260;
+
 }
 div {
     text-align: center;
@@ -32,6 +33,7 @@ img {
     border-radius: 100%;
     display: block;
 }
+
 .alert {
     width: 100%;
     padding: 10px;
@@ -75,6 +77,9 @@ img {
     clear: both;
     height: 10px;
 }
+input {
+    font-family: "Source Code Pro", sans-serif;
+}
 label,
 input,
 textarea {
@@ -114,7 +119,7 @@ textarea {
     /*width: 400px;*/
     /*height: 400px;*/
     width: 100%;
-    height: 400px;
+    height: 500px;
     max-width: 400px;
     position: relative;
     top: 10%;
